cabal-version: 3.0
name:          poseidon
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:
  "Haskell bindings for the poseidon hash function over the BLS12-381 scalar field."

build-type:    Simple

library poseidon-lib
  exposed-modules:   Test
  hs-source-dirs:    lib
  default-language:  Haskell2010
  build-depends:     base >=4.2 && <5
  pkgconfig-depends: libblst

--  pkgconfig-depends: libblst, libposeidon

test-suite poseidon-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , base >=4.2 && <5
    , poseidon-lib
